jvm/jvm.rs

pub const JVM_OPC_f2i: ::std::os::raw::c_uint = 139;
pub const JVM_OPC_f2l: ::std::os::raw::c_uint = 140;
pub const JVM_OPC_f2d: ::std::os::raw::c_uint = 141;
pub const JVM_OPC_d2i: ::std::os::raw::c_uint = 142;
pub const JVM_OPC_d2l: ::std::os::raw::c_uint = 143;
pub const JVM_OPC_d2f: ::std::os::raw::c_uint = 144;
pub const JVM_OPC_i2b: ::std::os::raw::c_uint = 145;
pub const JVM_OPC_i2c: ::std::os::raw::c_uint = 146;
pub const JVM_OPC_i2s: ::std::os::raw::c_uint = 147;
pub const JVM_OPC_lcmp: ::std::os::raw::c_uint = 148;
pub const JVM_OPC_fcmpl: ::std::os::raw::c_uint = 149;
pub const JVM_OPC_fcmpg: ::std::os::raw::c_uint = 150;
pub const JVM_OPC_dcmpl: ::std::os::raw::c_uint = 151;
pub const JVM_OPC_dcmpg: ::std::os::raw::c_uint = 152;
pub const JVM_OPC_ifeq: ::std::os::raw::c_uint = 153;
pub const JVM_OPC_ifne: ::std::os::raw::c_uint = 154;
pub const JVM_OPC_iflt: ::std::os::raw::c_uint = 155;
pub const JVM_OPC_ifge: ::std::os::raw::c_uint = 156;
pub const JVM_OPC_ifgt: ::std::os::raw::c_uint = 157;
pub const JVM_OPC_ifle: ::std::os::raw::c_uint = 158;
pub const JVM_OPC_if_icmpeq: ::std::os::raw::c_uint = 159;
pub const JVM_OPC_if_icmpne: ::std::os::raw::c_uint = 160;
pub const JVM_OPC_if_icmplt: ::std::os::raw::c_uint = 161;
pub const JVM_OPC_if_icmpge: ::std::os::raw::c_uint = 162;
pub const JVM_OPC_if_icmpgt: ::std::os::raw::c_uint = 163;
pub const JVM_OPC_if_icmple: ::std::os::raw::c_uint = 164;
pub const JVM_OPC_if_acmpeq: ::std::os::raw::c_uint = 165;
pub const JVM_OPC_if_acmpne: ::std::os::raw::c_uint = 166;
pub const JVM_OPC_goto: ::std::os::raw::c_uint = 167;
pub const JVM_OPC_jsr: ::std::os::raw::c_uint = 168;
pub const JVM_OPC_ret: ::std::os::raw::c_uint = 169;
pub const JVM_OPC_tableswitch: ::std::os::raw::c_uint = 170;
pub const JVM_OPC_lookupswitch: ::std::os::raw::c_uint = 171;
pub const JVM_OPC_ireturn: ::std::os::raw::c_uint = 172;
pub const JVM_OPC_lreturn: ::std::os::raw::c_uint = 173;
pub const JVM_OPC_freturn: ::std::os::raw::c_uint = 174;
pub const JVM_OPC_dreturn: ::std::os::raw::c_uint = 175;
pub const JVM_OPC_areturn: ::std::os::raw::c_uint = 176;
pub const JVM_OPC_return: ::std::os::raw::c_uint = 177;
pub const JVM_OPC_getstatic: ::std::os::raw::c_uint = 178;
pub const JVM_OPC_putstatic: ::std::os::raw::c_uint = 179;
pub const JVM_OPC_getfield: ::std::os::raw::c_uint = 180;
pub const JVM_OPC_putfield: ::std::os::raw::c_uint = 181;
pub const JVM_OPC_invokevirtual: ::std::os::raw::c_uint = 182;
pub const JVM_OPC_invokespecial: ::std::os::raw::c_uint = 183;
pub const JVM_OPC_invokestatic: ::std::os::raw::c_uint = 184;
pub const JVM_OPC_invokeinterface: ::std::os::raw::c_uint = 185;
pub const JVM_OPC_invokedynamic: ::std::os::raw::c_uint = 186;
pub const JVM_OPC_new: ::std::os::raw::c_uint = 187;
pub const JVM_OPC_newarray: ::std::os::raw::c_uint = 188;
pub const JVM_OPC_anewarray: ::std::os::raw::c_uint = 189;
pub const JVM_OPC_arraylength: ::std::os::raw::c_uint = 190;
pub const JVM_OPC_athrow: ::std::os::raw::c_uint = 191;
pub const JVM_OPC_checkcast: ::std::os::raw::c_uint = 192;
pub const JVM_OPC_instanceof: ::std::os::raw::c_uint = 193;
pub const JVM_OPC_monitorenter: ::std::os::raw::c_uint = 194;
pub const JVM_OPC_monitorexit: ::std::os::raw::c_uint = 195;
pub const JVM_OPC_wide: ::std::os::raw::c_uint = 196;
pub const JVM_OPC_multianewarray: ::std::os::raw::c_uint = 197;
pub const JVM_OPC_ifnull: ::std::os::raw::c_uint = 198;
pub const JVM_OPC_ifnonnull: ::std::os::raw::c_uint = 199;
pub const JVM_OPC_goto_w: ::std::os::raw::c_uint = 200;
pub const JVM_OPC_jsr_w: ::std::os::raw::c_uint = 201;
pub const JVM_OPC_MAX: ::std::os::raw::c_uint = 201;
pub type verifier_fn_t = ::std::option::Option<
    unsafe extern "C" fn(
        env: *mut JNIEnv,
        cb: jclass,
        msg_buf: *mut ::std::os::raw::c_char,
        buf_len: jint,
    ) -> jboolean,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct method_size_info {
    pub code: ::std::os::raw::c_ulong,
    pub excs: ::std::os::raw::c_ulong,
    pub etab: ::std::os::raw::c_ulong,
    pub lnum: ::std::os::raw::c_ulong,
    pub lvar: ::std::os::raw::c_ulong,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct class_size_info {
    pub constants: ::std::os::raw::c_uint,
    pub fields: ::std::os::raw::c_uint,
    pub methods: ::std::os::raw::c_uint,
    pub interfaces: ::std::os::raw::c_uint,
    pub fields2: ::std::os::raw::c_uint,
    pub innerclasses: ::std::os::raw::c_uint,
    pub clinit: method_size_info,
    pub main: method_size_info,
}
pub type to_java_string_fn_t = ::std::option::Option<
    unsafe extern "C" fn(env: *mut JNIEnv, str_: *mut ::std::os::raw::c_char) -> jstring,
>;
pub type to_c_string_fn_t = ::std::option::Option<
    unsafe extern "C" fn(
        env: *mut JNIEnv,
        s: jstring,
        b: *mut jboolean,
    ) -> *mut ::std::os::raw::c_char,
>;
pub type check_format_fn_t = ::std::option::Option<
    unsafe extern "C" fn(
        class_name: *mut ::std::os::raw::c_char,
        data: *mut ::std::os::raw::c_uchar,
        data_size: ::std::os::raw::c_uint,
        class_size: *mut class_size_info,
        message_buffer: *mut ::std::os::raw::c_char,
        buffer_length: jint,
        measure_only: jboolean,
        check_relaxed: jboolean,
    ) -> jint,
>;
pub type canonicalize_fn_t = ::std::option::Option<
    unsafe extern "C" fn(
        env: *mut JNIEnv,
        orig: *mut ::std::os::raw::c_char,
        out: *mut ::std::os::raw::c_char,
        len: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int,
>;
extern "C" {
    pub fn JVM_GetLastErrorString(
        buf: *mut ::std::os::raw::c_char,
        len: ::std::os::raw::c_int,
    ) -> jint;
}
extern "C" {
    pub fn JVM_NativePath(arg1: *mut ::std::os::raw::c_char) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn JVM_Open(fname: *const ::std::os::raw::c_char, flags: jint, mode: jint) -> jint;
}
extern "C" {
    pub fn JVM_Close(fd: jint) -> jint;
}
extern "C" {
    pub fn JVM_Read(fd: jint, buf: *mut ::std::os::raw::c_char, nbytes: jint) -> jint;
}
extern "C" {
    pub fn JVM_Write(fd: jint, buf: *mut ::std::os::raw::c_char, nbytes: jint) -> jint;
}
extern "C" {
    pub fn JVM_Available(fd: jint, pbytes: *mut jlong) -> jint;
}
extern "C" {
    pub fn JVM_Lseek(fd: jint, offset: jlong, whence: jint) -> jlong;
}
extern "C" {
    pub fn JVM_SetLength(fd: jint, length: jlong) -> jint;
}
extern "C" {
    pub fn JVM_Sync(fd: jint) -> jint;
}
extern "C" {
    pub fn JVM_InitializeSocketLibrary() -> jint;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sockaddr {
    _unused: [u8; 0],
}
extern "C" {
    pub fn JVM_Socket(domain: jint, type_: jint, protocol: jint) -> jint;
}
extern "C" {
    pub fn JVM_SocketClose(fd: jint) -> jint;
}
extern "C" {
    pub fn JVM_SocketShutdown(fd: jint, howto: jint) -> jint;
}
extern "C" {
    pub fn JVM_Recv(fd: jint, buf: *mut ::std::os::raw::c_char, nBytes: jint, flags: jint) -> jint;
}
extern "C" {
    pub fn JVM_Send(fd: jint, buf: *mut ::std::os::raw::c_char, nBytes: jint, flags: jint) -> jint;
}
extern "C" {
    pub fn JVM_Timeout(fd: ::std::os::raw::c_int, timeout: ::std::os::raw::c_long) -> jint;
}
extern "C" {
    pub fn JVM_Listen(fd: jint, count: jint) -> jint;
}
extern "C" {
    pub fn JVM_Connect(fd: jint, him: *mut sockaddr, len: jint) -> jint;
}
extern "C" {
    pub fn JVM_Bind(fd: jint, him: *mut sockaddr, len: jint) -> jint;
}
extern "C" {
    pub fn JVM_Accept(fd: jint, him: *mut sockaddr, len: *mut jint) -> jint;
}
extern "C" {
    pub fn JVM_RecvFrom(
        fd: jint,
        buf: *mut ::std::os::raw::c_char,
        nBytes: ::std::os::raw::c_int,
        flags: ::std::os::raw::c_int,
        from: *mut sockaddr,
        fromlen: *mut ::std::os::raw::c_int,
    ) -> jint;
}
extern "C" {
    pub fn JVM_SendTo(
        fd: jint,
        buf: *mut ::std::os::raw::c_char,
        len: ::std::os::raw::c_int,
        flags: ::std::os::raw::c_int,
        to: *mut sockaddr,
        tolen: ::std::os::raw::c_int,
    ) -> jint;
}
extern "C" {
    pub fn JVM_SocketAvailable(fd: jint, result: *mut jint) -> jint;
}
extern "C" {
    pub fn JVM_GetSockName(fd: jint, him: *mut sockaddr, len: *mut ::std::os::raw::c_int) -> jint;
}
extern "C" {
    pub fn JVM_GetSockOpt(
        fd: jint,
        level: ::std::os::raw::c_int,
        optname: ::std::os::raw::c_int,
        optval: *mut ::std::os::raw::c_char,
        optlen: *mut ::std::os::raw::c_int,
    ) -> jint;
}
extern "C" {
    pub fn JVM_SetSockOpt(
        fd: jint,
        level: ::std::os::raw::c_int,
        optname: ::std::os::raw::c_int,
        optval: *const ::std::os::raw::c_char,
        optlen: ::std::os::raw::c_int,
    ) -> jint;
}
extern "C" {
    pub fn JVM_GetHostName(
        name: *mut ::std::os::raw::c_char,
        namelen: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn jio_vsnprintf(
        str_: *mut ::std::os::raw::c_char,
        count: size_t,
        fmt: *const ::std::os::raw::c_char,
        args: *mut __va_list_tag,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn jio_snprintf(
        str_: *mut ::std::os::raw::c_char,
        count: size_t,
        fmt: *const ::std::os::raw::c_char,
        ...
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn jio_fprintf(
        arg1: *mut FILE,
        fmt: *const ::std::os::raw::c_char,
        ...
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn jio_vfprintf(
        arg1: *mut FILE,
        fmt: *const ::std::os::raw::c_char,
        args: *mut __va_list_tag,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn JVM_RawMonitorCreate() -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn JVM_RawMonitorDestroy(mon: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn JVM_RawMonitorEnter(mon: *mut ::std::os::raw::c_void) -> jint;
}
extern "C" {
    pub fn JVM_RawMonitorExit(mon: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn JVM_GetManagement(version: jint) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn JVM_InitAgentProperties(env: *mut JNIEnv, agent_props: jobject) -> jobject;
}
extern "C" {
    pub fn JVM_GetTemporaryDirectory(env: *mut JNIEnv) -> jstring;
}
extern "C" {
    pub fn JVM_GetEnclosingMethodInfo(env: *mut JNIEnv, ofClass: jclass) -> jobjectArray;
}
pub const JAVA_THREAD_STATE_NEW: ::std::os::raw::c_uint = 0;
pub const JAVA_THREAD_STATE_RUNNABLE: ::std::os::raw::c_uint = 1;
pub const JAVA_THREAD_STATE_BLOCKED: ::std::os::raw::c_uint = 2;
pub const JAVA_THREAD_STATE_WAITING: ::std::os::raw::c_uint = 3;
pub const JAVA_THREAD_STATE_TIMED_WAITING: ::std::os::raw::c_uint = 4;
pub const JAVA_THREAD_STATE_TERMINATED: ::std::os::raw::c_uint = 5;
pub const JAVA_THREAD_STATE_COUNT: ::std::os::raw::c_uint = 6;
extern "C" {
    pub fn JVM_GetThreadStateValues(env: *mut JNIEnv, javaThreadState: jint) -> jintArray;
}
extern "C" {
    pub fn JVM_GetThreadStateNames(
        env: *mut JNIEnv,
        javaThreadState: jint,
        values: jintArray,
    ) -> jobjectArray;
}
extern "C" {
    pub fn JVM_KnownToNotExist(
        env: *mut JNIEnv,
        loader: jobject,
        classname: *const ::std::os::raw::c_char,
    ) -> jboolean;
}
extern "C" {
    pub fn JVM_GetResourceLookupCacheURLs(env: *mut JNIEnv, loader: jobject) -> jobjectArray;
}
extern "C" {
    pub fn JVM_GetResourceLookupCache(
        env: *mut JNIEnv,
        loader: jobject,
        resource_name: *const ::std::os::raw::c_char,
    ) -> jintArray;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jvm_version_info {
    pub jvm_version: ::std::os::raw::c_uint,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 4usize], u16>,
    pub reserved2: ::std::os::raw::c_uint,
    pub _bitfield_2: __BindgenBitfieldUnit<[u8; 12usize], u8>,
}
